Updated related works and added a note.

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This code is a supplement to the upcoming publication of Aranbarri et al. (unpublished) investigating the effect of habitat complexity on the feeding functional response of two freshwater invertebrate predators. You will find details on the methodology in the cited publication. We will link to it after we make it publicly available.
 
+**Note that this code is still under construction!**
+
 ## License
 
 This code is published under a [**GNU General Public License 3**](https://www.gnu.org/licenses/gpl-3.0.html).
@@ -39,11 +41,15 @@ This code is published under a [**GNU General Public License 3**](https://www.gn
 
 -   [Data on GitHub](https://github.com/b-c-r/CRITTERdata)
 
+-   [R-Code on Zenodo](https://doi.org/10.5281/zenodo.14894598) [@RallEtAl2025ComplexityReducesFeedingCode]
+
+-   [R-Code on GitHub](https://github.com/b-c-r/CRITTERdata)
+
+-   [Statistical Report on GitHub](https://github.com/b-c-r/CRITTERstatistics)
+
+-   Statistical Report on Zenodo (link tba)
+
 -   Scientific Preprint Paper (link tba)
-
--   R-Code on Zenodo (link tba)
-
--   Supplementary Statistical Report (link tba)
 
 ## Brief Code Description
 
