--- a/references/CRITTERcode.bib
+++ b/references/CRITTERcode.bib
@@ -12,7 +12,7 @@
 	author = {Vucic-Pestic, Olivera and Rall, Björn Christian and Kalinkat, Gregor and Brose, Ulrich},
 	month = jan,
 	year = {2010},
-	keywords = {attack rate, body-mass ratio, food webs and predator–prey interactions, handling time, hill exponent, metabolic theory, optimal foraging, per capita consumption rate},
+	keywords = {attack rate, handling time, per capita consumption rate, body-mass ratio, food webs and predator–prey interactions, hill exponent, metabolic theory, optimal foraging},
 	pages = {249--256},
 	file = {vucicPesticEtAl_2010_jAnimEcol_101111J13652656200901622X.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/vucicPesticEtAl_2010_jAnimEcol_101111J13652656200901622X.pdf:application/pdf},
 }
@@ -222,7 +222,7 @@
 	journal = {Methods in Ecology and Evolution},
 	author = {Pritchard, Daniel W. and Paterson, Rachel A. and Bovy, Helene C. and Barrios-O'Neill, Daniel},
 	year = {2017},
-	keywords = {bootstrapping, consumer-resource interactions, maximum likelihood, nonlinear curve fitting, predator–prey, resource use},
+	keywords = {predator–prey, maximum likelihood, bootstrapping, consumer-resource interactions, nonlinear curve fitting, resource use},
 	pages = {1528--1534},
 	file = {pritchardEtAl_2017_methodsEcolEvol_1011112041210x12784.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/pritchardEtAl_2017_methodsEcolEvol_1011112041210x12784.pdf:application/pdf},
 }
@@ -262,14 +262,14 @@
 }
 
 @misc{FloresEtAl2025ComplexityReducesFeedingData,
-	title = {Complexity reduces feeding strength of freshwater predators ({CRITTER}) {Data}},
+	title = {Complexity reduces feeding strength of freshwater predators ({CRITTER}) - {Data}},
 	url = {https://doi.org/10.5281/zenodo.14891980},
 	doi = {10.5281/zenodo.14891980},
-	abstract = {This is the initial release of the data accompanying the upcoming publication of Aranbarri et al. (unpublished). The data is usable, and no data should be added in the future. Metadata, such as affiliations or links to related works, may change in upcoming versions.},
 	publisher = {Zenodo},
-	author = {Flores, Lorea and Reiss, Julia and Larrañaga, Aitor and Rall, Björn Christian and Aranbarri, Mireia and de Guzmán, Ioar},
+	author = {Flores, Lorea and Reiss, Julia and Larrañaga, Aitor and Rall, Björn Christian and Aranbarri, Mireia and Guzmán, Ioar de},
 	month = feb,
 	year = {2025},
+	file = {floresEtAl_2025_dataset_zenodo_105281Zenodo14891980.csv:/home/bcr/DATA/Dropbox/Science/Literatur/floresEtAl_2025_dataset_zenodo_105281Zenodo14891980.csv:text/csv},
 }
 
 @misc{Zhu2024KableExtraConstructComplex,
@@ -289,6 +289,33 @@
 	abstract = {A complete and consistent functional programming toolkit for R.},
 	author = {Wickham, Hadley and Henry, Lionel},
 	collaborator = {{Posit Software, PBC}},
+	month = feb,
+	year = {2025},
+}
+
+@misc{RallEtAl2025ComplexityReducesFeedingCode,
+	title = {Complexity reduces feeding strength of freshwater predators ({CRITTER}) - {Code}},
+	url = {https://doi.org/10.5281/zenodo.14894598},
+	publisher = {Zenodo},
+	author = {Rall, Björn Christian and Aranbarri, Mireia and Flores, Lorea and de Guzmán, Ioar and Larrañaga, Aitor and Reiss, Julia},
+	month = feb,
+	year = {2025},
+}
+
+@techreport{RallEtAl2025ComplexityReducesFeedingStatistics,
+	title = {Complexity reduces feeding strength of freshwater predators ({CRITTER}) - {Supplemental} {Statistics} {Report}},
+	url = {https://doi.org/10.5281/zenodo.14898819},
+	institution = {Zenodo},
+	author = {Rall, Björn Christian and Aranbarri, Mireia and Flores, Lorea and de Guzmán, Ioar and Larrañaga, Aitor and Reiss, Julia},
+	month = feb,
+	year = {2025},
+	doi = {10.5281/zenodo.14898820},
+}
+
+@misc{AranbarriEtAl2025ComplexityReducesFeeding,
+	title = {Complexity reduces feeding strength of freshwater predators},
+	publisher = {bioRχiv},
+	author = {Aranbarri, Mireia and Flores, Lorea and de Guzmán, Ioar and Larrañaga, Aitor and Elosegi, Arturo and Rall, Björn Christian and Reiss, Julia},
 	month = feb,
 	year = {2025},
 }
