--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "*C*omplexity *r*educes feed*i*ng s*t*reng*t*h of fr*e*shwater p*r*edators (CRITTER, Code Repository)"
 bibliography: references/CRITTERcode.bib
-# csl: references/methods-in-ecology-and-evolution.csl
+csl: references/methods-in-ecology-and-evolution.csl
 date: "`r Sys.Date()`"
 output: github_document
 ---
@@ -53,7 +53,7 @@ This code is published under a [**GNU General Public License 3**](https://www.gn
 
 -   [Statistical Report on GitHub](https://github.com/b-c-r/CRITTERstatistics)
 
--   Statistical Report on Zenodo (link tba)
+-   [Statistical Report on Zenodo](https://doi.org/10.5281/zenodo.14898819) [@RallEtAl2025ComplexityReducesFeedingStatistics]
 
 -   Scientific Preprint Paper (link tba)
 
@@ -65,6 +65,7 @@ We predominantly used functions to organize our R code for this project. Each fu
 
 The functions are located in `/functions_phen_test/`.
 
+#### `phen_type_test`
 **`phen_type_test`** is a wrapper around the function `frair_test` [@PritchardEtAl2017FrairToolsFunctional; @PritchardEtAl2017FrairPackageFitting] to test for the type of the functional response using the proportion of prey eaten as response to the initial prey density. If the proportion of prey eaten increases at low prey densities and decreases after reaching a maximum, there is evidence for a type III functional response [@Juliano2001NonlinearCurveFitting]. Proportion data is fitted using a binomial GLM, but see @Crawley2012Book, chapter 16 for an introduction to this topic.
 
 Required packages and their dependencies to be installed:
@@ -79,6 +80,7 @@ Required packages to be attached:
 - `dplyr` [@WickhamEtAl2023DplyrGrammarData]
 - `foreach` [@MicrosoftWeston2022ForeachProvidesForeach]
 
+#### `phen_type_table`
 **`phen_type_table`** takes a `phen_type_test` output and creates a nice table for the statistical report. Note that the function uses options from `kableEXTRA` [@Zhu2024KableExtraConstructComplex] that will only work for LaTeX/PDF outputs. This function is rather hard-coded and only useful in the CRITTER project.
 
 Required packages and their dependencies to be installed:
@@ -94,7 +96,8 @@ Required packages to be attached:
 
 The functions are located in `/functions_gen_fr/`.
 
-**`gen_fr_compile`** compiles the ordinary differential equation (ODE) describing the decay of resource items over time during a feeding functional response trial. The functional response model has a free shape parameter [@Real1977KineticsFunctionalResponse; @Real1979EcologicalDeterminantsFunctional], allowing a continuous shift of the shape of a classic type II functional response [@Holling1959CharacteristicsSimpleTypes] to a type III functional response [@Holling1959ComponentsPredationRevealed]. The feeding rate, $F$, depends on the resource density, $N$, and the parameters of the model are the maximum feeding rate, $F_{max}$, the half saturation density, $N_{half}$, and the shape parameter $q$ [@WilliamsMartinez2004StabilizationChaoticNonpermanent; @Vucic-PesticEtAl2010AllometricFunctionalResponse]:
+#### `gen_fr_compile`
+`gen_fr_compile` compiles the ordinary differential equation (ODE) describing the decay of resource items over time during a feeding functional response trial. The functional response model has a free shape parameter [@Real1977KineticsFunctionalResponse; @Real1979EcologicalDeterminantsFunctional], allowing a continuous shift of the shape of a classic type II functional response [@Holling1959CharacteristicsSimpleTypes] to a type III functional response [@Holling1959ComponentsPredationRevealed]. The feeding rate, $F$, depends on the resource density, $N$, and the parameters of the model are the maximum feeding rate, $F_{max}$, the half saturation density, $N_{half}$, and the shape parameter $q$ [@WilliamsMartinez2004StabilizationChaoticNonpermanent; @Vucic-PesticEtAl2010AllometricFunctionalResponse]:
 
 $$
 F = \frac{F_{max}  N^{(1+q)}}{N_{half}^{(1+q)} + N^{(1+q)}}.
@@ -116,7 +119,9 @@ Required packages to be attached:
 
 - None
 
-**`gen_fr_sim`** simulates time series across different initial prey densities. It returns only the number of initial prey items and the number of prey eaten at the end of the time series, mimicking common functional response laboratory experiments. The underlying functional response model is the generalized functional response model [@Real1977KineticsFunctionalResponse; @Real1979EcologicalDeterminantsFunctional]. Note that not integers, but floating numbers are returned by **`gen_fr_sim`**. **`gen_fr_sim`** depends on **`gen_fr_compile`**. Please find more details there.
+#### `gen_fr_sim`
+
+**`gen_fr_sim`** simulates time series across different initial prey densities. It returns only the number of initial prey items and the number of prey eaten at the end of the time series, mimicking common functional response laboratory experiments. The underlying functional response model is the generalized functional response model [@Real1977KineticsFunctionalResponse; @Real1979EcologicalDeterminantsFunctional]. Note that not integers, but floating numbers are returned by **`gen_fr_sim`**. **`gen_fr_sim`** depends on **`gen_fr_compile`**. Please find details more above.
 
 
 Required packages and their dependencies to be installed:
@@ -128,6 +133,33 @@ Required packages and their dependencies to be installed:
 Required packages to be attached:
 
 - `foreach` [@MicrosoftWeston2022ForeachProvidesForeach]
+
+#### `gen_fr_nll`
+**`gen_fr_nll`** calculates the negative log likelihood of the generalized functional response model [@Real1977KineticsFunctionalResponse; @Real1979EcologicalDeterminantsFunctional], but see the description of **`gen_fr_compile`** for further information. We calculated the likelihood assuming a binomial distribution, as every prey item has a chance to be eaten or not to be eaten throughout the experimental trial. For further details on the methodology, please read chapter eight of “Ecological models and data in R” [@Bolker2008EcologicalModelsData]. To restrict the fitting to reasonable values of the shape parameter $q$ [@WilliamsMartinez2004StabilizationChaoticNonpermanent; @Vucic-PesticEtAl2010AllometricFunctionalResponse; @RosenbaumRall2018FittingFunctionalResponses] we applied a quadratic penalty on the negative log-likelihood following:
+
+```{r eval=FALSE, include=TRUE}
+if(q < q_low){
+  nll <- nll + penalty*(q-q_low)^2
+} else{
+  if(q >= q_up){
+    nll <- nll + penalty*(q-q_up)^2
+  } else{
+    nll <- nll
+  }
+}
+```
+
+`q_low` is set to “0” by default (a type II functional response), `q_up` is set to “1” by default (a “strict” type III functional response), and `penalty` is set to 1000 by default. Especially `q_low` is important, as negative values may lead to an unsolvable time series for `gen_fr_sim` leading to a crash of the fitting process. Even with this restriction, the simulation may fail for extreme values of $F_{max}$ or $N_{half}$; in this case, the function returns `Inf`. Alternative solutions would be that the function returns `NA` [@Bolker2008EcologicalModelsData].
+
+Required packages and their dependencies to be installed:
+
+- `odin` [@FitzJohn2024OdinODEGeneration]
+- `foreach` [@MicrosoftWeston2022ForeachProvidesForeach]
+
+Required packages to be attached:
+
+- `foreach` [@MicrosoftWeston2022ForeachProvidesForeach]
+
 
 ## Funding Information
 
