--- a/README.Rmd
+++ b/README.Rmd
@@ -174,6 +174,23 @@ Required packages to be attached:
 
 - `foreach` [@MicrosoftWeston2022ForeachProvidesForeach]
 
+#### `gen_fr_fit`
+
+**`gen_fr_fit`** automatically fits the generalized functional response model [@Real1977KineticsFunctionalResponse; @RosenbaumRall2018FittingFunctionalResponses] to data. In the simplest case, you only need to provide the number of resources eaten (count data) and the initial resource density (count data): the function does the rest, including initial parameter value guessing. See the parameters section and the code example for more options. If your experiment ran a day, but you want to have the maximum feeding rate on an hourly basis, you can enter t_end = 24.
+
+Required packages and their dependencies to be installed:
+
+. `bbmle` [@BolkerEtAl2023BbmleToolsGeneral]
+- `dplyr` [@WickhamEtAl2023DplyrGrammarData]
+- `foreach` [@MicrosoftWeston2022ForeachProvidesForeach]
+- `lhs` [@Carnell2024LhsLatinHypercubea]
+- `odin` [@FitzJohn2024OdinODEGeneration]
+
+Required packages to be attached:
+
+- `dplyr` [@WickhamEtAl2023DplyrGrammarData]
+- `foreach` [@MicrosoftWeston2022ForeachProvidesForeach]
+
 
 ## Funding Information
 
