--- a/references/CRITTERcode.bib
+++ b/references/CRITTERcode.bib
@@ -27,6 +27,13 @@
 	year = {2024},
 }
 
+@misc{MicrosoftWeston2022DoParallelForeachParallel,
+	title = {{doParallel}: foreach parallel adaptor for the 'parallel' package},
+	url = {https://CRAN.R-project.org/package=doParallel},
+	author = {{Microsoft} and Weston, Steve},
+	year = {2022},
+}
+
 @misc{WickhamEtAl2023DplyrGrammarData,
 	title = {dplyr: a grammar of data manipulation},
 	url = {https://doi.org/10.32614/CRAN.package.dplyr},
