--- a/references/CRITTERcode.bib
+++ b/references/CRITTERcode.bib
@@ -326,3 +326,10 @@
 	month = feb,
 	year = {2025},
 }
+
+@misc{Xie2024KnitrGeneralpurposePackage,
+	title = {knitr: a general-purpose package for dynamic report generation in {R}},
+	url = {https://yihui.org/knitr/},
+	author = {Xie, Yihui},
+	year = {2024},
+}
