--- a/references/CRITTERcode.bib
+++ b/references/CRITTERcode.bib
@@ -17,6 +17,22 @@
 	file = {vucicPesticEtAl_2010_jAnimEcol_101111J13652656200901622X.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/vucicPesticEtAl_2010_jAnimEcol_101111J13652656200901622X.pdf:application/pdf},
 }
 
+@article{Royama1971ComparativeStudyModels,
+	title = {A comparative study of models for predation and parasitism},
+	volume = {13},
+	issn = {0034-5466, 1437-5613},
+	url = {https://doi.org/10.1007/BF02511547},
+	doi = {10.1007/BF02511547},
+	language = {en},
+	number = {1},
+	journal = {Researches on Population Ecology},
+	author = {Royama, T.},
+	month = sep,
+	year = {1971},
+	pages = {1--91},
+	file = {royama_1971_resPopulEcol_101007Bf02511547.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/royama_1971_resPopulEcol_101007Bf02511547.pdf:application/pdf},
+}
+
 @misc{FitzJohn2024OdinODEGeneration,
 	title = {odin: {ODE} generation and integration},
 	copyright = {MIT},
@@ -34,12 +50,37 @@
 	year = {2022},
 }
 
+@misc{Bolker2023EmdbookSupportFunctions,
+	title = {emdbook: support functions and data for "{Ecological} models and data"},
+	copyright = {GPL-2 {\textbar} GPL-3 [expanded from: GPL (≥ 2)]},
+	url = {https://CRAN.R-project.org/package=emdbook},
+	author = {Bolker, Benjamin M.},
+	year = {2023},
+}
+
 @misc{WickhamEtAl2023DplyrGrammarData,
 	title = {dplyr: a grammar of data manipulation},
 	url = {https://doi.org/10.32614/CRAN.package.dplyr},
 	author = {Wickham, Hadley and François, Romain and Henry, Lionel and Müller, Kirill and Vaughan, Davis},
 	collaborator = {{Posit Software, PBC}},
 	year = {2023},
+}
+
+@article{VoneshBolker2005CompensatoryLarvalResponses,
+	title = {Compensatory larval responses shift trade-offs associated with predator-induced hatching plasticity},
+	volume = {86},
+	issn = {1939-9170},
+	url = {https://doi.org/10.1890/04-0535},
+	doi = {10.1890/04-0535},
+	abstract = {Many species with complex life histories can respond to risk by adaptively altering the timing of key life history switch points, including hatching. It is generally thought that such hatching plasticity involves a trade-off between embryonic and hatchling predation risk, e.g., hatching early to escape egg predation comes at the cost of increased vulnerability to hatchling predators. However, most empirical work has focused on simply detecting predator-induced hatching responses or on the short-term consequences of hatching plasticity. Short-term studies may not allow sufficient time for hatchlings to exhibit compensatory responses, which may extend to subsequent life stages and could alter the nature of the trade-offs associated with hatching plasticity. In this study, we examine the consequences of predator-induced hatching plasticity through the larval stage to metamorphosis in the East African reed frog, Hyperolius spinigularis. To do this we conducted an experiment in which we manipulated initial larval size and density (mimicking the effects of egg predators) and the presence of aquatic predators. We expected that predator-induced hatchlings (because they are less developed and smaller) would experience higher per capita predation rates and a longer larval period and thus would exhibit lower survival to metamorphosis in the presence of aquatic predators than larger, more developed, later hatched larvae. Surprisingly, we found that predator-induced hatchlings survived better, not worse, than hatchlings from undisturbed clutches. These results motivated us to develop a model parameterized from additional experiments to explore whether a combination of mechanisms, compensatory growth, and density- and size-specific predation, could give rise to this pattern. Predicted survival probabilities from the model with compensatory growth were consistent with those from the field experiment: early hatched larvae grew more rapidly through vulnerable size classes than later hatched larvae, resulting in higher survival at metamorphosis. Thus, in this system, there does not appear to be a trade-off in vulnerability between egg and larval predators. Instead, our results suggest that the cost that balances the survival benefit of hatching early to evade egg predators arises later in the life history, as a result of smaller size at metamorphosis.},
+	language = {en},
+	number = {6},
+	journal = {Ecology},
+	author = {Vonesh, James R. and Bolker, Benjamin M.},
+	year = {2005},
+	keywords = {compensatory growth, density-mediated indirect interaction (DMII), functional response, hatching plasticity, Hyperolius spinigularis, multiple predators, phenotypic plasticity, size-selective predation, trait-mediated indirect interaction (TMII)},
+	pages = {1580--1591},
+	file = {04-0535.html:/home/bcr/DATA/Dropbox/Science/Literatur/04-0535.html:text/html},
 }
 
 @misc{PritchardEtAl2017FrairToolsFunctional,
@@ -66,10 +107,26 @@
 	file = {crawley_2012_book_theRBook.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/crawley_2012_book_theRBook.pdf:application/pdf},
 }
 
+@article{CorlessEtAl1996LambertWFunction,
+	title = {On the {LambertW} function},
+	volume = {5},
+	issn = {1019-7168, 1572-9044},
+	url = {https://doi.org/10.1007/BF02124750},
+	doi = {10.1007/BF02124750},
+	language = {en},
+	number = {1},
+	urldate = {2022-05-10},
+	journal = {Advances in Computational Mathematics},
+	author = {Corless, R. M. and Gonnet, G. H. and Hare, D. E. G. and Jeffrey, D. J. and Knuth, D. E.},
+	month = dec,
+	year = {1996},
+	pages = {329--359},
+	file = {corlessEtAl_1996_advComputMath_101007Bf02124750.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/corlessEtAl_1996_advComputMath_101007Bf02124750.pdf:application/pdf},
+}
+
 @book{Bolker2008EcologicalModelsData,
 	address = {Princeton, New Jersey},
 	title = {Ecological models and data in {R}},
-	copyright = {Copyright (c) 2008 by Princeton University Press},
 	isbn = {978-0-691-12522-0},
 	url = {https://math.mcmaster.ca/~bolker/emdbook/index.html},
 	language = {en},
@@ -187,6 +244,22 @@
 	file = {rosenbaumAndRall_2018_methodsEcolEvol_1011112041210x13039.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/rosenbaumAndRall_2018_methodsEcolEvol_1011112041210x13039.pdf:application/pdf},
 }
 
+@article{Rogers1972RandomSearchInsect,
+	title = {Random search and insect population models},
+	volume = {41},
+	issn = {00218790},
+	url = {https://doi.org/10.2307/3474},
+	doi = {10.2307/3474},
+	language = {en},
+	number = {2},
+	journal = {The Journal of Animal Ecology},
+	author = {Rogers, David},
+	month = jun,
+	year = {1972},
+	pages = {369--383},
+	file = {rogers_1972_jAnimEcol_1023073474.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/rogers_1972_jAnimEcol_1023073474.pdf:application/pdf},
+}
+
 @article{Real1979EcologicalDeterminantsFunctional,
 	title = {Ecological determinants of functional response},
 	volume = {60},
@@ -269,7 +342,7 @@
 }
 
 @misc{FloresEtAl2025ComplexityReducesFeedingData,
-	title = {Complexity reduces feeding strength of freshwater predators ({CRITTER}) - {Data}},
+	title = {Habitat complexity reduces feeding strength of freshwater predators ({CRITTER}) - {Data}},
 	url = {https://doi.org/10.5281/zenodo.14891980},
 	doi = {10.5281/zenodo.14891980},
 	publisher = {Zenodo},
@@ -301,7 +374,7 @@
 }
 
 @misc{RallEtAl2025ComplexityReducesFeedingCode,
-	title = {Complexity reduces feeding strength of freshwater predators ({CRITTER}) - {Code}},
+	title = {Habitat complexity reduces feeding strength of freshwater predators ({CRITTER}) - {Code}},
 	url = {https://doi.org/10.5281/zenodo.14894598},
 	publisher = {Zenodo},
 	author = {Rall, Björn Christian and Aranbarri, Mireia and Flores, Lorea and de Guzmán, Ioar and Larrañaga, Aitor and Reiss, Julia},
@@ -310,7 +383,7 @@
 }
 
 @techreport{RallEtAl2025ComplexityReducesFeedingStatistics,
-	title = {Complexity reduces feeding strength of freshwater predators ({CRITTER}) - {Supplemental} {Statistics} {Report}},
+	title = {Habitat complexity reduces feeding strength of freshwater predators ({CRITTER}) - {Supplemental} {Statistics} {Report}},
 	url = {https://doi.org/10.5281/zenodo.14898819},
 	institution = {Zenodo},
 	author = {Rall, Björn Christian and Aranbarri, Mireia and Flores, Lorea and de Guzmán, Ioar and Larrañaga, Aitor and Reiss, Julia},
@@ -320,11 +393,12 @@
 }
 
 @misc{AranbarriEtAl2025ComplexityReducesFeeding,
-	title = {Complexity reduces feeding strength of freshwater predators},
+	title = {Habitat complexity reduces feeding strength of freshwater predators},
 	publisher = {bioRχiv},
 	author = {Aranbarri, Mireia and Flores, Lorea and de Guzmán, Ioar and Larrañaga, Aitor and Elosegi, Arturo and Rall, Björn Christian and Reiss, Julia},
 	month = feb,
 	year = {2025},
+	file = {aranbarriEtAl_2025_biorIv_.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/aranbarriEtAl_2025_biorIv_.pdf:application/pdf},
 }
 
 @misc{Xie2024KnitrGeneralpurposePackage,
